--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
 .navbar {
     z-index: 99;
     position: fixed;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-bottom: 1px solid #108db1;
 }
 
 .navbar-toggler {
@@ -10,6 +12,11 @@
 
 .navbar-brand img {
     width: 169px;
+}
+
+.nav-item a {
+    color: #108db1 !important;
+    font-weight: 600;
 }
 
 @media (max-width: 768px) {
