--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    background-color: #e5e5f7;
+    background-image: linear-gradient(#108db1 1px, transparent 1px), linear-gradient(to right, #108db1 1px, #e5e5f7 1px);
+    background-size: 200px 200px;
+}
