--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,19 +5,19 @@
 
         <ul class="navbar-nav me-auto mt-lg-0 ">
             <li class="nav-item active ">
-                <a class="nav-link text-white" href="#">Home <span class="visually-hidden">(current)</span></a>
+                <a class="nav-link text-white" >Home <span class="visually-hidden">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white" href="#">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">Services</a>
+                <a class="nav-link text-white"  routerLink="services">Services</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white" href="#">Projects</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link text-white" href="#">Technologies</a>
+                <a class="nav-link text-white" routerLink="landing">Technologies</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link text-white" href="#">Contact Us</a>
@@ -34,3 +34,7 @@
 
     </div>
 </nav>
+
+
+
+<router-outlet></router-outlet> 
