--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,8 @@
 <!-- Nav tabs -->
 
 
-        <ul class="navbar-nav me-auto mt-lg-0 ">
-            <li class="nav-item active ">
-                <a class="nav-link text-white" >Home <span class="visually-hidden">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white"  routerLink="services">Services</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Projects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" routerLink="landing">Technologies</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="#">Contact Us</a>
-            </li>
-        </ul>
-    </div>
-</div>
+
+
 <nav class="navbar navbar-expand-md navbar-light bg-transparent">
 <nav class="navbar  navbar-expand-md fixed-top navbar-light   ">
     <div class="container">
@@ -42,13 +22,13 @@
                         <a class="nav-link text-dark" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Services</a>
+                        <a class="nav-link text-dark" href="services">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="#">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Technologies</a>
+                        <a class="nav-link text-dark" href="technologies">Technologies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="#">Contact Us</a>
