--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,13 +22,13 @@
                         <a class="nav-link text-dark" href="#">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="services">Services</a>
+                        <a class="nav-link text-dark" routerLink="services">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="#">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="technologies">Technologies</a>
+                        <a class="nav-link text-dark" routerLink="technologies">Technologies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" href="#">Contact Us</a>
@@ -42,5 +42,5 @@
 
 
 <router-outlet></router-outlet> 
-<app-home></app-home>
-<app-about-us></app-about-us>
+
+
