--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,7 +1,7 @@
-<div class="header">TECHNOLOGIES</div>
-    <body>
-    
-    <div>
+
+    <div class="fg">
+        <div class="header">TECHNOLOGIES</div>
+    <div class="ko">
         
            <p> At IR4LAB, we are using the power of emerging technologies efficiently,
             it’s not just buzzwords but we explore and demonstrate how to turn these buzzwords into real applications.</p>
@@ -51,4 +51,4 @@
     
     
 
-</body>
+    </div>
