--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -3,23 +3,31 @@
     padding: 0;
     box-sizing: border-box;
     font-family: sans-serif;
+   
 }
 
-body {
+.fg {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-   
+    scroll-behavior: auto;
+    overflow-y: scroll;
+    
+    
 }
+   
+
 
 
 .card {
     position: relative;
     width: 300px;
     height: 400px;
-    margin: 20px;
+    margin: 35px;
+    top: 60px;
+   
 }
 
 .card .face {
@@ -28,7 +36,7 @@ body {
     height: 100%;
     backface-visibility: hidden;
     border-radius: 10px;
-    overflow: hidden;
+    
     transition: .5s;
 }
 
@@ -72,6 +80,7 @@ body {
     border-top: solid 1px #f3f3f3;
     height: 50px;
     line-height: 50px;
+    
 }
 
 .card .back .link a {
@@ -97,7 +106,7 @@ body {
     transform: perspective(600px) rotateY(360deg);
 }
 
- .header{
+     .header{
 	width: 100%;
 	height: 50px;
 	background: rgb(3, 35, 54);
@@ -110,4 +119,22 @@ body {
 	text-transform: uppercase;
 	letter-spacing: 5px;
 	font-weight: 900;
+   
+}
+
+.header{
+	top: 105px;
+	position: relative;
+    position: fixed;
+    
+
+}
+.ko
+{
+    top: 120px;
+    position: relative;
+    align-items: center;
+    text-align: center;
+    font-size: 16px;
+
 }
