--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
                         <a class="nav-link text-dark" routerLink="technologies">Technologies</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" href="#">Contact Us</a>
+                        <a class="nav-link text-dark" href="contact">Contact Us</a>
                     </li>
                 </ul>
             </div>
