card for z index

--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -27,7 +27,7 @@
     height: 400px;
     margin: 35px;
     top: 60px;
-   
+   z-index: 0;
 }
 
 .card .face {
@@ -126,7 +126,7 @@
 	top: 105px;
 	position: relative;
     position: fixed;
-    
+    z-index: 1;
 
 }
 .ko
