--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
     </button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <div class="container-fluid nav-wrapper p-0 m-0   ">
-                    <ul class="navbar-nav me-auto mt-lg-0 w-100  h-100 d-flex justify-content-center align-items-center">
+                    <ul class="navbar-nav me-auto mt-lg-0 w-100  h-100 d-flex justify-content-end align-items-center">
                         <li class="nav-item active ">
                             <a class="nav-link " routerLink="">Home <span class="visually-hidden">(current)</span></a>
                         </li>
