--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- Nav tabs -->
-
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="bg">
+    <app-navbar></app-navbar>
+    <router-outlet></router-outlet>
+</div>
