--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -17,7 +17,7 @@
 	height: 100%;
 	left: 0;
 	top: 0;
-	//background: url("img/bg.jpg") no-repeat center;
+	//background: url("../../assets/images/ig2.jpg") no-repeat center;
 	background-size: cover;
 	filter: blur(50px);
 	z-index: -1;
@@ -34,7 +34,7 @@
 }
 
 .left{
-	//background: url("img/bg.jpg") no-repeat center;
+	background: url("../../assets/images/img1.jpg") no-repeat center;
 	background-size: cover;
 	height: 100%;
 }
