--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -27,7 +27,7 @@
                             <a class="nav-link " routerLink="technologies">Technologies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="#">Contact Us</a>
+                            <a class="nav-link " routerLink="contact">Contact Us</a>
                         </li>
                     </ul>
                 </div>
