--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md navbar-light bg-transparent">
     <nav class="navbar  navbar-expand-md fixed-top navbar-light   ">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" routerLink="/">
                 <img src="../assets/img/Multicolor.png">
             </a>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
