--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -19,9 +19,11 @@
     position: relative;
     width: 300px;
     height: 400px;
-    margin: 35px;
-    top: 60px;
+    margin: 60px;
+    top: 25px;
+    border-radius: 10px;
     z-index: 0;
+    
 }
 
 .card .face {
@@ -43,6 +45,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 8px;
 }
 
 .card .front h3 {
@@ -54,7 +57,7 @@
     color: #fff;
     background: rgba(0, 0, 0, .4);
     text-align: center;
-    font-size: 20px;
+    font-size: 12px;
 }
 
 .card .back {
@@ -114,7 +117,7 @@
 }
 
 .header {
-    top: 105px;
+    top: 75px;
     position: relative;
     position: fixed;
     z-index: 1;
@@ -126,4 +129,11 @@
     align-items: center;
     text-align: center;
     font-size: 16px;
+    margin: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: rgb(0, 81, 255);
+    display:inline-block ;
+   
 }
