--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -1,9 +1,4 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
-}
+
 
 .fg {
     display: flex;
@@ -11,18 +6,22 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    scroll-behavior: auto;
-    overflow-y: scroll;
+    
+    
 }
 
 .card {
     position: relative;
-    width: 300px;
+    width: 20rem;
     height: 400px;
     margin: 60px;
-    top: 25px;
+    top: 0px;
     border-radius: 10px;
     z-index: 0;
+    overflow: hidden;;
+    display: -ms-inline-flexbox;
+    top: -60px;
+    
     
 }
 
@@ -124,16 +123,16 @@
 }
 
 .ko {
-    top: 120px;
-    position: relative;
-    align-items: center;
+   
+    
     text-align: center;
-    font-size: 16px;
-    margin: 0px;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: rgb(0, 81, 255);
-    display:inline-block ;
+    font-size:1rem;
+    display: inline-block;
+   
+    margin-top: 150px;
+    font-family:'Franklin Gothic Medium';
+    color: rgb(18, 175, 214);
+   
    
 }
+
