--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,11 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-
-footer{
+footer {
     display: block;
     bottom: 0;
     left: 0;
@@ -13,107 +12,117 @@ footer{
     background: #111;
     height: auto;
     width: 100vw;
-
     padding-top: 1px;
     color: #fff;
-    position:static;
+    position: static;
 }
-.footer-content{
+
+.footer-content {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     text-align: center;
 }
-.footer-content h3{
+
+.footer-content h3 {
     font-size: 2.1rem;
     font-weight: 500;
     text-transform: capitalize;
     line-height: 3rem;
 }
-.footer-content p{
+
+.footer-content p {
     max-width: 500px;
     margin: 10px auto;
     line-height: 28px;
     font-size: 14px;
     color: #cacdd2;
 }
-.socials{
+
+.socials {
     list-style: none;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 1rem 0 3rem 0;
 }
-.socials li{
+
+.socials li {
     margin: 0 10px;
 }
-.socials a{
+
+.socials a {
     text-decoration: none;
     color: #fff;
     border: 1.1px solid white;
     padding: 5px;
-
     border-radius: 50%;
-
 }
-.socials a i{
+
+.socials a fa-icon {
     font-size: 1.1rem;
     width: 20px;
-
-
     transition: color .4s ease;
-
 }
-.socials a:hover i{
+
+.socials a:hover fa-icon {
     color: aqua;
 }
 
-.footer-bottom{
+.footer-bottom {
     background: #000;
     width: 100vw;
     padding: 20px;
-padding-bottom: 40px;
+    padding-bottom: 40px;
     text-align: center;
 }
-.footer-bottom p{
-float: left;
+
+.footer-bottom p {
+    float: left;
     font-size: 14px;
     word-spacing: 2px;
     text-transform: capitalize;
 }
-.footer-bottom p a{
-  color:#44bae8;
-  font-size: 16px;
-  text-decoration: none;
+
+.footer-bottom p a {
+    color: #44bae8;
+    font-size: 16px;
+    text-decoration: none;
 }
-.footer-bottom span{
+
+.footer-bottom span {
     text-transform: uppercase;
     opacity: .4;
     font-weight: 200;
 }
-.footer-menu{
-  float: right;
 
+.footer-menu {
+    float: right;
 }
-.footer-menu ul{
-  display: flex;
+
+.footer-menu ul {
+    display: flex;
 }
-.footer-menu ul li{
-padding-right: 10px;
-display: block;
+
+.footer-menu ul li {
+    padding-right: 10px;
+    display: block;
 }
-.footer-menu ul li a{
-  color: #cfd2d6;
-  text-decoration: none;
+
+.footer-menu ul li a {
+    color: #cfd2d6;
+    text-decoration: none;
 }
-.footer-menu ul li a:hover{
-  color: #27bcda;
+
+.footer-menu ul li a:hover {
+    color: #27bcda;
 }
 
 @media (max-width:500px) {
-.footer-menu ul{
-  display: flex;
-  margin-top: 10px;
-  margin-bottom: 20px;
-}}
+    .footer-menu ul {
+        display: flex;
+        margin-top: 10px;
+        margin-bottom: 20px;
+    }
+}
