--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -1,4 +1,154 @@
-.about {
-    height: 100vh;
-    background-color: white;
+/*** VARIABLES ***/
+
+
+/* Colors */
+
+$black: #1d1f20;
+$blue: #83e4e2;
+$green: #64f581;
+$yellow: #fddc32;
+$white: #fafafa;
+
+/*** EXTEND ***/
+
+
+/* box-shadow */
+
+%boxshadow {
+    box-shadow: 0.25rem 0.25rem 0.6rem rgba(0, 0, 0, 0.05), 0 0.5rem 1.125rem rgba(75, 0, 0, 0.05);
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 110px 100px;
+}
+
+.container:after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    //background: url("../../assets/images/ig2.jpg") no-repeat center;
+    background-size: cover;
+    filter: blur(50px);
+    z-index: -1;
+}
+
+.about-box {
+    max-width: 850px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 19px 5px rgba(0, 0, 0, 0.19);
+}
+
+.left {
+    padding: 25px 40px;
+    height: 100%;
+}
+
+.right {
+    grid-column: 2 / -1;
+    padding: 25px 40px;
+}
+
+h2 {
+    font-weight: 800;
+    padding: 10px;
+    text-align: center;
+}
+
+p {
+    font-family: 'helvetica';
+    padding: 10px;
+    color: gray;
+    text-align: justify;
+}
+
+ul.gradient-list {
+    counter-reset: gradient-counter;
+    list-style: none;
+    margin: 1.75rem 0;
+    padding-left: 1rem;
+    >li {
+        transition: all 1s;
+        background: white;
+        border-radius: 0 0.5rem 0.5rem 0.5rem;
+        @extend %boxshadow;
+        counter-increment: gradient-counter;
+        font-size: small;
+        margin-top: 1rem;
+        min-height: 3rem;
+        padding: 1rem 1rem 1rem 3rem;
+        position: relative;
+        &::before,
+        &::after {
+            transition: all 1s;
+            background: linear-gradient(135deg, $blue 0%, $green 100%);
+            border-radius: 1rem 1rem 0 1rem;
+            content: '';
+            height: 3rem;
+            left: -1rem;
+            overflow: hidden;
+            position: absolute;
+            top: -1rem;
+            width: 3rem;
+        }
+        &::before {
+            align-items: flex-end;
+            @extend %boxshadow;
+            content: '';
+            color: $black;
+            display: flex;
+            font: 900 1em/1 'helvetica';
+            justify-content: flex-end;
+            padding: 0.125em 0.25em;
+            z-index: 1;
+        }
+        &:hover::after,
+        &:hover::before {
+            transition: all 1s;
+            height: 6rem;
+            width: 3.5rem;
+        }
+        &:hover {
+            background: #e6e6e6;
+        }
+        @for $i from 1 through 5 {
+            &:nth-child(10n+#{$i}):before {
+                background: linear-gradient(135deg, rgba($green, $i * 0.2) 0%, rgba($yellow, $i * 0.2) 100%);
+            }
+        }
+        @for $i from 6 through 10 {
+            &:nth-child(10n+#{$i}):before {
+                background: linear-gradient(135deg, rgba($green, 1 - (($i - 5) * 0.2)) 0%, rgba($yellow, 1 - (($i - 5) * 0.2)) 100%);
+            }
+        }
+        +li {
+            margin-top: 2rem;
+        }
+    }
+}
+
+.Logo {
+    width: 250px;
+    padding: 15px;
+}
+
+@media screen and (max-width: 880px) {
+    .about-box {
+        grid-template-columns: 1fr;
+    }
+    .left {
+        height: 200px;
+    }
 }
