--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,10 +1,13 @@
-
- <footer>
+<footer>
     <div class="footer-content">
         <h3>Foolish Developer</h3>
         <p>Raj Template is a blog website where you will find great tutorials on web design and development. Here each tutorial is beautifully described step by step with the required source code.</p>
         <ul class="socials">
-            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+            <li>
+                <a href="#">
+                    <fa-icon [icon]="faFacebook"></fa-icon>
+                </a>
+            </li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
             <li><a href="#"><i class="fa fa-youtube"></i></a></li>
@@ -12,15 +15,15 @@
         </ul>
     </div>
     <div class="footer-bottom">
-        <p>copyright &copy; <a href="#">Foolish Developer</a>  </p>
-                <div class="footer-menu">
-                  <ul class="f-menu">
-                    <li><a href="">Home</a></li>
-                    <li><a href="">About</a></li>
-                    <li><a href="">Contact</a></li>
-                    <li><a href="">Blog</a></li>
-                  </ul>
-                </div>
+        <p>copyright &copy; <a href="#">Foolish Developer</a> </p>
+        <div class="footer-menu">
+            <ul class="f-menu">
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+                <li><a href="">Blog</a></li>
+            </ul>
+        </div>
     </div>
 
 </footer>
