--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,2 +1,21 @@
-<p>projects works!</p>
-<div class="project"></div>
+<div class="card__collection clear-fix">
+    <a href="https://doccerts.com/">
+    <div class="cards cards--two">
+        
+        <img src="assets/images/docCert.png" class="img-responsive" alt="Cards Image">
+        <span class="cards--two__rect"></span>
+        <span class="cards--two__tri"></span>
+        <p>DocCerts</p>
+     
+      </div>
+    </a>
+    <a href="https://www.seculedger.com/home">
+      <div class="cards cards--two">
+        <img src="assets/images/she.png" class="img-responsive" alt="Cards Image">
+        <span class="cards--two__rect"></span>
+        <span class="cards--two__tri"></span>
+        <p>Seculedger App</p>
+     
+      </div>
+    </a>
+    </div>
