--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="about" class="container">
     <div class="about-box">
         <div class="left">
             <h2>ABOUT US</h2>
