--- a/src/app/about-us/about-us.component.scss
+++ b/src/app/about-us/about-us.component.scss
@@ -45,6 +45,7 @@ $white: #fafafa;
     max-width: 850px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1;
     justify-content: center;
     align-items: center;
     background-color: #fff;
@@ -57,7 +58,7 @@ $white: #fafafa;
 }
 
 .right {
-    grid-column: 2 / -1;
+    grid-column: 2 / span 2;
     padding: 25px 40px;
 }
 
@@ -145,10 +146,18 @@ ul.gradient-list {
 }
 
 @media screen and (max-width: 880px) {
+    .container {
+        padding: 0;
+    }
     .about-box {
         grid-template-columns: 1fr;
     }
     .left {
-        height: 200px;
+        height: 300px;
+        padding: 10px;
+    }
+    .right {
+        grid-column: 1;
+        padding: 15px;
     }
 }
