--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,12 @@
 <!-- Nav tabs -->
 <div class="bg">
     <app-navbar></app-navbar>
-    <router-outlet></router-outlet>
+    <!-- <router-outlet></router-outlet> -->
 </div>
+<app-home></app-home>
+<app-about-us></app-about-us>
+<app-services></app-services>
+<app-projects></app-projects>
+<app-technologies></app-technologies>
+<app-contact-us></app-contact-us>
 <app-footer></app-footer>
