--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div id="contact" class="container">
     <div class="contact-box">
         <div class="left"></div>
         <div class="right">
