--- a/src/app/contact-us/contact-us.component.scss
+++ b/src/app/contact-us/contact-us.component.scss
@@ -101,6 +101,9 @@ textarea {
 }
 
 @media screen and (max-width: 880px) {
+    .container {
+        padding: 0;
+    }
     .contact-box {
         grid-template-columns: 1fr;
     }
