--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,29 +5,29 @@
                 <img src="../assets/img/Multicolor.png">
             </a>
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-      
+
       <fa-icon [icon]="faBars"></fa-icon>
     </button>
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <div class="container-fluid nav-wrapper p-0 m-0   ">
                     <ul class="navbar-nav me-auto mt-lg-0 w-100  h-100 d-flex justify-content-end align-items-center">
                         <li class="nav-item active ">
-                            <a class="nav-link " routerLink="">Home <span class="visually-hidden">(current)</span></a>
+                            <a class="nav-link " href="#home">Home <span class="visually-hidden">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="about">About Us</a>
+                            <a class="nav-link " href="#about">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="services">Services</a>
+                            <a class="nav-link " href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="projects">Projects</a>
+                            <a class="nav-link " href="#projects">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="technologies">Technologies</a>
+                            <a class="nav-link " href="#technologies">Technologies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " routerLink="contact">Contact Us</a>
+                            <a class="nav-link " href="#contact">Contact Us</a>
                         </li>
                     </ul>
                 </div>
