--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,4 +4,13 @@ body {
     background-color: #e5e5f7;
     background-image: linear-gradient(#108db1 1px, transparent 1px), linear-gradient(to right, #108db1 1px, #e5e5f7 1px);
     background-size: 200px 200px;
+    background-position-x: left;
+    background-position-y: top;
+    transition: all 3s;
+}
+
+body:hover {
+    background-image: linear-gradient(#108db1 1px, transparent 1px), linear-gradient(to right, #108db1 1px, #e5e5f7 1px);
+    background-position-x: center;
+    background-position-y: center;
 }
