--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,4 @@
-<div class="card__collection clear-fix">
+<div id="projects" class="card__collection clear-fix">
     <a href="https://doccerts.com/">
         <div class="cards cards--two">
 
