--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,7 @@ body {
     background-position-x: left;
     background-position-y: top;
     transition: all 3s;
+    scroll-behavior: smooth;
 }
 
 body:hover {
