--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -31,7 +31,7 @@ $color-box-7 : #de8b3e;
 .card__collection {
     position: relative;
     display: block;
-    
+   
     padding: 10px;
     font-family: 'Do Hyeon', sans-serif;
     overflow: hidden;
@@ -49,11 +49,12 @@ $color-box-7 : #de8b3e;
       margin: 10px;
       right: -25%;
       
+      
 
   }
   
   .cards--one {
-      backface-visiblility: hidden;
+  
       &:hover {
         
         &:after {
@@ -463,4 +464,7 @@ $color-box-7 : #de8b3e;
     }
   }
  
+}
+.card__collection{
+    top: 70px;
 }
