--- a/src/app/services/services.component.scss
+++ b/src/app/services/services.component.scss
@@ -27,13 +27,13 @@
 	padding: 20px;
 	width: 100%;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	flex-wrap: wrap;
 }
 
 .cards_wrap .card_item{
 	padding: 15px 25px;
-	width: 25%;
+	width: 33%;
 }
 
 .cards_wrap .card_inner{
