--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,13 +5,11 @@
         <ul class="socials">
             <li>
                 <a href="#">
-                    <fa-icon [icon]="faFacebook"></fa-icon>
+                    <fa-icon [icon]="faLinkedinIn"></fa-icon>
                 </a>
             </li>
-            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-            <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-            <li><a href="#"><i class="fa fa-linkedin-square"></i></a></li>
+            <li><a href="#"><fa-icon [icon]="faFacebook"></fa-icon></a></li>
+            <li><a href="#"> <fa-icon [icon]="faTwitter"></fa-icon></a></li>
         </ul>
     </div>
     <div class="footer-bottom">
