--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,5 +1,5 @@
 <div id="services" class="wrapper">
-    <div class="header">SERVICES</div>
+    <h3 class="header text-dark pt-3">SERVICES</h3>
 
     <div class="cards_wrap">
         <div class="card_item">
