--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -1,21 +1,18 @@
 .fg {
-    display: flex;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    background-color: rgba($color: (#fff), $alpha: 0.9);
 }
 
 .card {
     width: 20rem;
     height: 400px;
-    margin: 60px;
+    margin: 20px 60px;
     top: 0px;
     border-radius: 10px;
     z-index: 0;
     overflow: hidden;
-    
-    top: -60px;
 }
 
 .card .face {
@@ -94,28 +91,14 @@
 }
 
 .header {
-    width: 100%;
-    height: 50px;
-    background: rgb(3, 35, 54);
-    color: #fff;
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    text-transform: uppercase;
-    letter-spacing: 5px;
+    font-size: 24px;
     font-weight: 900;
-    top: 73px;
-    position: relative;
-    z-index: 1;
 }
 
 .ko {
     text-align: center;
     font-size: 1rem;
-    display: inline-block;
-    margin-top: 150px;
     font-family: 'Franklin Gothic Medium';
     color: rgb(18, 175, 214);
 }
