--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 <app-about-us></app-about-us>
 <app-services></app-services>
 <app-projects></app-projects>
+<app-facts></app-facts>
 <app-technologies></app-technologies>
 <app-contact-us></app-contact-us>
 <app-footer></app-footer>
