--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -120,6 +120,9 @@ $color-box-7: #de8b3e;
         }
     }
     .cards--two {
+        background-color: rgba($color: #fff, $alpha: 0.5);
+        border-top: 4px solid #fff;
+        border-right: 4px solid #fff;
         position: relative;
         backface-visibility: hidden;
         p {
@@ -199,7 +202,7 @@ $color-box-7: #de8b3e;
                 width: 100%;
                 position: relative;
                 height: 100%;
-                background: $color-box-5;
+                background: #1F3950;
                 transform: translateY(200px);
                 z-index: 2;
                 transition: all .3s ease-in-out;
@@ -231,166 +234,4 @@ $color-box-7: #de8b3e;
             }
         }
     }
-    .cards--three {
-        position: relative;
-        z-index: 10;
-        &:hover {
-            .cards--three__rect-1 {
-                left: 10%;
-                .shadow-1 {
-                    left: -20%;
-                }
-            }
-            .cards--three__rect-2 {
-                left: 60%;
-                &:before {
-                    left: -100%;
-                }
-                &:after {
-                    left: 80%;
-                }
-                .shadow-2 {
-                    left: -10%;
-                }
-            }
-            .cards--three__circle {
-                transform: scale(1);
-                &:before {
-                    transform: scale(.9);
-                }
-            }
-            .cards--three__list {
-                li {
-                    transform: translateX(0);
-                }
-            }
-        }
-        &__rect-1 {
-            background: #fff;
-            width: 200px;
-            height: 110px;
-            transform: skewX(-20deg);
-            display: block;
-            position: absolute;
-            top: 73%;
-            opacity: .9;
-            left: -100%;
-            z-index: 8;
-            transition: all .5s ease-in;
-            .shadow-1 {
-                background: $color-box-6;
-                width: 230px;
-                height: 100px;
-                display: block;
-                position: absolute;
-                left: -200%;
-                z-index: -1;
-                transition: all .3s ease-in;
-            }
-        }
-        &__rect-2 {
-            width: 100px;
-            height: 70px;
-            background: #fff;
-            position: absolute;
-            top: 65%;
-            left: 1000%;
-            opacity: .9;
-            transform: skewX(-20deg);
-            z-index: 8;
-            transition: all .5s ease-in;
-            &::before {
-                content: '';
-                display: block;
-                width: 50px;
-                height: 40px;
-                background: $color-box-3;
-                opacity: 1;
-                position: absolute;
-                left: 500%;
-                top: 10%;
-                transition: all .3s ease-in;
-            }
-            &::after {
-                content: '';
-                display: block;
-                width: 50px;
-                height: 40px;
-                background: $color-box-6;
-                opacity: 1;
-                position: absolute;
-                left: 500%;
-                top: 114%;
-                transition: all .5s ease-in;
-                transition-delay: .2s;
-            }
-            .shadow-2 {
-                background: $color-box-3;
-                width: 100%;
-                height: 100%;
-                display: block;
-                position: absolute;
-                top: -10%;
-                left: 500%;
-                transition: all .5s ease-in;
-                transition-delay: .2s;
-            }
-        }
-        &__circle {
-            width: 220px;
-            height: 220px;
-            border-radius: 50%;
-            background: #fff;
-            position: absolute;
-            top: -15%;
-            left: 50%;
-            opacity: .9;
-            transform: scale(0);
-            transition: all .3s ease;
-            &:before {
-                content: '';
-                display: block;
-                width: 100%;
-                height: 100%;
-                background: $color-box-6;
-                border-radius: 50%;
-                transform: scale(0);
-                transition: all .3s ease;
-                transition-delay: .2s;
-            }
-        }
-        &__list {
-            list-style: none;
-            position: absolute;
-            top: -9px;
-            right: 7px;
-            padding-top: 60px;
-            transition: all .4s ease;
-            li {
-                display: inline-block;
-                margin: 4px;
-                color: #fff;
-                width: 25px;
-                height: 25px;
-                border-radius: 50%;
-                background: rgba(87, 204, 253, .9);
-                text-align: center;
-                line-height: 1.7rem;
-                font-size: 12px;
-                transition: all .3s ease;
-                transform: translateX(500%);
-                &:nth-child(1) {
-                    transition-delay: .2s;
-                }
-                &:nth-child(2) {
-                    transition-delay: .3s;
-                }
-                &:nth-child(3) {
-                    transition-delay: .4s;
-                }
-            }
-        }
-    }
 }
-
-.card__collection {}
