--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,27 +1,28 @@
 <footer>
     <div class="footer-content">
-        <h3>Foolish Developer</h3>
-        <p>Raj Template is a blog website where you will find great tutorials on web design and development. Here each tutorial is beautifully described step by step with the required source code.</p>
+        <h3>Suivez-Nous</h3>
+
         <ul class="socials">
             <li>
                 <a href="#">
                     <fa-icon [icon]="faLinkedinIn"></fa-icon>
                 </a>
             </li>
-            <li><a href="#"><fa-icon [icon]="faFacebook"></fa-icon></a></li>
-            <li><a href="#"> <fa-icon [icon]="faTwitter"></fa-icon></a></li>
+            <li>
+                <a href="#">
+                    <fa-icon [icon]="faFacebook"></fa-icon>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <fa-icon [icon]="faTwitter"></fa-icon>
+                </a>
+            </li>
         </ul>
+        <img src="../../assets/img/Multicolor.png" alt="">
     </div>
-    <div class="footer-bottom">
-        <p>copyright &copy; <a href="#">Foolish Developer</a> </p>
-        <div class="footer-menu">
-            <ul class="f-menu">
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">Blog</a></li>
-            </ul>
-        </div>
+    <div class="footer-bottom text-center">
+        <p>copyright &copy; <a href="#">Ir4lab</a> </p>
     </div>
 
 </footer>
