--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,6 +1,20 @@
 <div id="contact" class="container">
     <div class="contact-box">
-        <div class="left"></div>
+        <div class="left d-flex justify-content-center flex-column">
+            <a href="">
+                <h4>
+                    <fa-icon [icon]="faLocationDot" size="lg"></fa-icon> 2Bn Alhaitham St, KFUPM Dhahran Techno Valley Science Park Dhahran 34464</h4>
+            </a>
+            <a href="">
+                <h4>
+                    <fa-icon [icon]="faPhone" size="lg"></fa-icon> +966554408447</h4>
+            </a>
+            <a href="">
+                <h4>
+                    <fa-icon [icon]="faAt" size="lg"></fa-icon> info@ir4lab.com</h4>
+            </a>
+
+        </div>
         <div class="right">
             <h2>Contact Us</h2>
             <input type="text" class="field" placeholder="Your Name">
