--- a/src/app/facts/facts.component.scss
+++ b/src/app/facts/facts.component.scss
@@ -2,5 +2,7 @@
     padding: 20px;
     text-align: center;
     background-size: 55px 55px;
-    background-image: repeating-linear-gradient(0deg, #e5e5f7d6, #e5e5f7d6 1px, #4ab8c4ae 1px, #4AB7C4ae);
+    background-color: #4ab8c4ae;
+    border-top: 4px solid #fff;
+    border-bottom: 4px solid #4ab8c4;
 }
