--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,52 +1,54 @@
-<div id="technologies" class="fg">
-    <h3 class="header text-dark pt-3">TECHNOLOGIES</h3>
+<div id="technologies">
+    <div class="fg">
+        <h3 class="header text-dark pt-3">TECHNOLOGIES</h3>
 
-    <p class="ko"> At IR4LAB, we are using the power of emerging technologies efficiently, it’s not just buzzwords but we explore and demonstrate how to turn these buzzwords into real applications.</p>
+        <p class="ko"> At IR4LAB, we are using the power of emerging technologies efficiently, it’s not just buzzwords but we explore and demonstrate how to turn these buzzwords into real applications.</p>
 
-    <div class="d-flex">
-        <div class="card">
-            <div class="face front">
-                <img src="assets/images/ok.png">
-                <h3>Blockchain</h3>
+        <div class="collection d-flex flex-wrap justify-content-center ">
+            <div class="card">
+                <div class="face front">
+                    <img src="assets/images/ok.png">
+                    <h3>Blockchain</h3>
+                </div>
+                <div class="face back">
+                    <h3>Blockchain</h3>
+                    <p>It’s a peer-to-peer technology that enables transfer of value and assets in a decentralised fashion, eliminating the need for central authorities and intermediaries.Blockchain, the technology behind bitcoin, has made it possible to
+                        operate in a trustless environment using the power of distributed computers, cryptography and consensus algorithms. Blockchain technology goes beyond payment applications to revolutionise any industry that require trust, transfer
+                        of assets and involve a business network. Blockchain generate value by removing friction and streamlining processes, eliminating the need for costly audits.
+                    </p>
+
+                </div>
             </div>
-            <div class="face back">
-                <h3>Blockchain</h3>
-                <p>It’s a peer-to-peer technology that enables transfer of value and assets in a decentralised fashion, eliminating the need for central authorities and intermediaries.Blockchain, the technology behind bitcoin, has made it possible to operate
-                    in a trustless environment using the power of distributed computers, cryptography and consensus algorithms. Blockchain technology goes beyond payment applications to revolutionise any industry that require trust, transfer of assets
-                    and involve a business network. Blockchain generate value by removing friction and streamlining processes, eliminating the need for costly audits.
-                </p>
 
-            </div>
-        </div>
+            <div class="card">
+                <div class="face front">
+                    <img lass="img-responsive" src="assets/images/jk.jpg" alt="">
+                    <h3>ARTIFICIAL INTELLIGENCE/MACHINE LEARNING</h3>
+                </div>
+                <div class="face back">
+                    <h3>ARTIFICIAL INTELLIGENCE / MACHINE LEARNING</h3>
+                    <p>Since the early days of computers, the technology has evolved to allow machines to perform activities much faster and more efficient than human beings, systems of information are powering everyone’s life today, we are communicating,
+                        interacting and doing business using sophisticated and intelligent applications and softwares. Like human beings, Artificial Intelligence and more specifically machine learning provide these systems of information to automatically
+                        learn and improve based on iterative learning and experience, provided they have access to reliable sets of data.</p>
 
-        <div class="card">
-            <div class="face front">
-                <img lass="img-responsive" src="assets/images/jk.jpg" alt="">
-                <h3>ARTIFICIAL INTELLIGENCE/MACHINE LEARNING</h3>
+                </div>
             </div>
-            <div class="face back">
-                <h3>ARTIFICIAL INTELLIGENCE / MACHINE LEARNING</h3>
-                <p>Since the early days of computers, the technology has evolved to allow machines to perform activities much faster and more efficient than human beings, systems of information are powering everyone’s life today, we are communicating, interacting
-                    and doing business using sophisticated and intelligent applications and softwares. Like human beings, Artificial Intelligence and more specifically machine learning provide these systems of information to automatically learn and improve
-                    based on iterative learning and experience, provided they have access to reliable sets of data.</p>
 
-            </div>
-        </div>
+            <div class="card">
+                <div class="face front">
+                    <img src="assets/images/ck.jpg" alt="">
+                    <h3>INTERNET OF THINGS</h3>
+                </div>
+                <div class="face back">
+                    <h3>INTERNET OF THINGS</h3>
+                    <p>Advancement in technology, especially hardware, gave birth to a new paradigm where machines can be autonomous and perform a set of actions, theses machines connected to the internet can create a whole new autonomous network where information
+                        is exchanged and actions could be triggered based on this information. Whether it’s sensors, home appliances, vehicles or other devices, Internet of Things has created more opportunities to integrate information and connectedness
+                        into our physical world. According to Statista, by 2020, the installed base of the Internet of Things devices is forecast to grow to almost 31B worldwide. By 2025 the installed base of IoT devices will be over 75.4B devices.</p>
 
-        <div class="card">
-            <div class="face front">
-                <img src="assets/images/ck.jpg" alt="">
-                <h3>INTERNET OF THINGS</h3>
+                </div>
             </div>
-            <div class="face back">
-                <h3>INTERNET OF THINGS</h3>
-                <p>Advancement in technology, especially hardware, gave birth to a new paradigm where machines can be autonomous and perform a set of actions, theses machines connected to the internet can create a whole new autonomous network where information
-                    is exchanged and actions could be triggered based on this information. Whether it’s sensors, home appliances, vehicles or other devices, Internet of Things has created more opportunities to integrate information and connectedness into
-                    our physical world. According to Statista, by 2020, the installed base of the Internet of Things devices is forecast to grow to almost 31B worldwide. By 2025 the installed base of IoT devices will be over 75.4B devices.</p>
 
-            </div>
         </div>
 
     </div>
-
 </div>
