--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -1,8 +1,13 @@
 .fg {
     align-items: center;
     justify-content: center;
-    min-height: 100vh;
-    background-color: rgba($color: (#fff), $alpha: 0.9);
+    background-color: rgba($color: (#fff), $alpha: 0.7);
+    border-top: 4px solid #fff;
+    border-bottom: 4px solid #fff;
+}
+
+.collection {
+    padding: 30px 20px;
 }
 
 .card {
@@ -10,10 +15,11 @@
     height: 400px;
     margin: 20px 60px;
     top: 0px;
-    border-radius: 10px;
+    // border-radius: 10px;
     z-index: 0;
     overflow: visible;
     border: none;
+    background-color: transparent;
 }
 
 .card .face {
@@ -21,13 +27,13 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
-    border-radius: 10px;
+    // border-radius: 10px;
     transition: .5s;
 }
 
 .card .front {
     transform: perspective(600px) rotateY(0deg);
-    box-shadow: 0 5px 10px #000;
+    // box-shadow: 0 5px 10px #000;
 }
 
 .card .front img {
@@ -35,7 +41,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    border-radius: 8px;
+    // border-radius: 8px;
 }
 
 .card .front h3 {
@@ -59,7 +65,7 @@
     flex-direction: column;
     justify-content: space-between;
     text-align: center;
-    box-shadow: 0 5px 10px #000;
+    // box-shadow: 0 5px 10px #000;
 }
 
 .card .back .link {
@@ -104,4 +110,8 @@
     font-family: 'Franklin Gothic Medium';
     color: rgb(18, 175, 214);
     background: rgba($color: rgb(18, 175, 214), $alpha: 0.1);
+}
+
+#technologies {
+    padding-top: 75px;
 }
