--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <!-- Carousel Start -->
 
-<div id="home" class="hero d-flex align-items-center justify-content-center ">
+<div id="home" class="hero d-flex align-items-center justify-content-center " ngsReveal>
     <div class="p-5" style="width: 100%; max-width: 900px; ">
         <h5 class="text-dark text-uppercase mb-md-3">We are building the future NOW</h5>
         <h1 class="display-3 text-dark mb-md-4">WELCOME TO IR4LAB</h1>
