--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,10 @@
     <app-navbar></app-navbar>
     <!-- <router-outlet></router-outlet> -->
 </div>
-<app-home></app-home>
-<app-about-us></app-about-us>
-<app-services></app-services>
-<app-projects></app-projects>
+<app-home ngsReveal></app-home>
+<app-about-us ngsReveal></app-about-us>
+<app-services ngsReveal></app-services>
+<app-projects ngsReveal></app-projects>
 <app-facts></app-facts>
 <app-technologies></app-technologies>
 <app-contact-us></app-contact-us>
