--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,3 +1,4 @@
+<div  [ngClass]="mode?  'light' :'dark'">
 <div id="technologies" class="fg">
     <h3 class="header text-dark pt-3">TECHNOLOGIES</h3>
 
@@ -49,4 +50,5 @@
 
     </div>
 
+</div>
 </div>
