--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,4 +1,6 @@
 <div id="projects">
+    <h3 class="header text-dark pt-3">PROJECTS</h3>
+
     <div class="card__collection d-flex justify-content-center flex-wrap">
         <a href="https://doccerts.com/">
             <div class="cards cards--two">
