--- a/src/app/projects/projects.component.scss
+++ b/src/app/projects/projects.component.scss
@@ -12,6 +12,12 @@
     content: '';
 }
 
+#projects .header {
+    text-align: center;
+    font-size: 24px;
+    font-weight: 900;
+}
+
 .img-responsive {
     max-width: 100%;
     height: auto;
