--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 
 <!-- <router-outlet></router-outlet> -->
 
-
+<app-navbar></app-navbar>
 <app-home [ngsReveal]="{ reset : true, duration: 1000}"></app-home>
 <app-about-us [ngsReveal]="{ reset : true, duration: 1000}"></app-about-us>
 <app-services [ngsReveal]="{ reset : true, duration: 1000}"></app-services>
