--- a/src/app/technologies/technologies.component.html
+++ b/src/app/technologies/technologies.component.html
@@ -1,11 +1,13 @@
 <div class="bh">
     <div class = "container flex-wrap justify-content">
       <div class = card>
+        <h3 class="h3title">Blockchain</h3>
         <div class = image>
+            
           <img href = "#" src ="assets/images/blockchain.png">
         </div>
         <div class = content>
-          <h3>This is content</h3>
+        
           <p>    It’s a peer-to-peer technology that enables transfer of value and assets in a decentralised fashion, eliminating the need for central authorities and intermediaries.Blockchain, the technology behind bitcoin, has made it possible to operate in a trustless environment using the power of distributed computers, cryptography and consensus algorithms.
             Blockchain technology goes beyond payment applications to revolutionise any industry that require trust, transfer of assets and involve a business network.
             Blockchain generate value by removing friction and streamlining processes, eliminating the need for costly audits.
@@ -13,21 +15,28 @@
         </div>
       </div>
       <div class = card>
+        <h3 class="h3title">AI</h3>
         <div class = image>
+            
           <img href = "#" src ="assets/images/ai.png">
         </div>
         <div class = content>
-          <h3>This is content</h3>
-          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+      
+          <p>Since the early days of computers, the technology has evolved to allow machines to perform activities much faster and more efficient than human beings, systems of information are powering everyone’s life today, we are communicating, interacting and doing business using sophisticated and intelligent applications and softwares.
+            Like human beings, Artificial Intelligence and more specifically machine learning provide these systems of information to automatically learn and improve based on iterative learning and experience, provided they have access to reliable sets of data.</p>
         </div>
       </div>    
       <div class = card>
+        <h3 class="h3title">IOT</h3>
         <div class = image>
+            
           <img href = "#" src ="assets/images/iot.png">
         </div>
         <div class = content>
-          <h3>This is content</h3>
-          <p>DIn publishing and graphic design,           Lorem ipsum is a placeholder text               commonly used to demonstrate the visual         form of a document or a typeface without         relying on meaningful content.</p>
+    
+          <p>Advancement in technology, especially hardware, gave birth to a new paradigm where machines can be autonomous and perform a set of actions, theses machines connected to the internet can create a whole new autonomous network where information is exchanged and actions could be triggered based on this information.
+            Whether it’s sensors, home appliances, vehicles or other devices, Internet of Things has created more opportunities to integrate information and connectedness into our physical world.
+            According to Statista, by 2020, the installed base of the Internet of Things devices is forecast to grow to almost 31B worldwide. By 2025 the installed base of IoT devices will be over 75.4B devices.</p>
         </div>
       </div>        
     </div>
