--- a/src/app/technologies/technologies.component.scss
+++ b/src/app/technologies/technologies.component.scss
@@ -30,7 +30,7 @@
     position: relative;
     width : 300px;
     height : 215px;  
-    background-color : #fff;
+    background-color : rgba(112, 215, 255, 0.685);
     margin : 30px 10px;
     padding : 20px 15px;
     
@@ -80,11 +80,30 @@
      margin-top : 30px;
      visibility : visible;
      opacity : 1;
-     transition-delay: 0.2s;
+     transition-delay: 0.7s;
     
   }
   .container .card:hover .image{
 
-    top : -20%;
+    
     left: 100px;
+    top : -24%;
+    transition: 1.5s;
+    opacity: .7;
+    
   }
+  .card h3 {
+top: 70px;
+text-align: center;
+
+  }
+:hover  .h3title{
+
+    position : relative;
+   
+    
+    top : 5%;
+    text-align: center;
+    
+    z-index : 1;
+ }
